syntax = "proto3";
option java_multiple_files = true;
option java_generic_services = true;
option java_package = "web.service.follow.rpc";

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  string email = 1;
  string name = 2;
}

service UserService{
  //get user by userId
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}